changes to original project before beginning React project

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     ></script>
  <link rel="stylesheet" href="src/styles.css" class="css" />
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-    <title>Mahri_WeatherApp</title>
+    <title>React project - weather app 2 | Mahri Stewart</title>
   </head>
 
   <body>
@@ -44,13 +44,13 @@
           autofocus="off"
           autocomplete="off"
           id="search-text-input"
-          class="searchInput btn"
+          class="search-input btn"
         />
         <input
           type="submit"
           value="Search"
           id="search-button"
-          class="btn btn-primary searchButton"
+          class="btn btn-primary search-button"
         />
         <span
           ><button id="current-location-button" class="btn btn-info">
@@ -81,7 +81,7 @@
           <ul>
             <li>
               <div class="temperature-displayed">
-              <strong class="temperatureNow" id ="temperature-now"></strong> 
+              <strong class="temperature-now" id ="temperature-now"></strong> 
               <span class="units">
                 <a href="#" id="temperature-c" class="active">°C</a>
                 | 
@@ -143,14 +143,14 @@
       <a
         href="https://github.com/MahriScot/Mahri_Weather_App"
         target="_blank"
-        class="gitHubLink"
+        class="github-link"
         >open-sourced on GitHub</a
       >
       and
       <a
         href="#"
         target="_blank"
-        class="netlifyLink"
+        class="netlify-link"
         >hosted on Netlify</a
       >
     </p>
